src/objects/Audit_Token__c.object
<CustomObject>
    <description>This object is intended to enable PEC Management limited control over patient payment dead extensions. By setting up a token, they communicate to the Data team that the related opportunity records should be kept in the system.</description>
    <fields>
        <fullName>Description__c</fullName>
        <formula>IF(ISBLANK(Prostho_Exam__c),
&quot;&quot;,
Prostho_Exam__r.Exam_Center_formula__c &amp; &quot;: &quot; &amp; Prostho_Exam__r.Name &amp; &quot; &quot; &amp; TEXT(Extend_Pending_Cancel__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extend_Pending_Cancel__c</fullName>
        <label>Extend Pending Cancel</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <description>If there&apos;s a Prostho Exam and the Pending Cancel date is in the future, it&apos;s an active token.</description>
        <formula>AND(
   NOT(ISNULL(Prostho_Exam__c))
   ,
   Extend_Pending_Cancel__c &gt; TODAY()
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Prostho_Exam__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prostho Exam</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Audit Tokens</relationshipLabel>
        <relationshipName>Audit_Tokens</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Region</label>
        <referenceTo>Sales_Region__c</referenceTo>
        <relationshipLabel>Audit Tokens</relationshipLabel>
        <relationshipName>Audit_Tokens</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Audit Token</label>
    <listViews>
        <fullName>My_Tokens</fullName>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Sales_Region__c</columns>
        <columns>Description__c</columns>
        <columns>Notes__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <label>My Tokens</label>
    </listViews>
    <listViews>
        <fullName>View_All_Tokens</fullName>
        <columns>Is_Active__c</columns>
        <columns>NAME</columns>
        <columns>Extend_Pending_Cancel__c</columns>
        <columns>Sales_Region__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Description__c</columns>
        <columns>Notes__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>View All Tokens</label>
    </listViews>
    <nameField>
        <label>Audit Tokens Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audit Tokens</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>